sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:3: error: ';' expected but '=' found.
var b:Boolean=false; d:Int=0 ;f:Int=getNombreValeurs()-2
                          ^AlgCocktailSort2:3: error: ';' expected but '=' found.
var b:Boolean=false; d:Int=0 ;f:Int=getNombreValeurs()-2
                                   ^